--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,76 @@
 /* Ini File CSS */
+
+/* Pengaturan posisi judul */
+.main-header {
+    text-align: center;
+}
+
+/* Pengaturan posisi isi konten */
+main {
+    display: flex;
+    gap: 32px;
+    padding: 50px;
+    place-content: center;
+}
+
+/* Pengaturan posisi field input */
+.form-group {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 16px;
+}
+
+/* Pengaturan jarak pada kolom input */
+input[type=number] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+/* Pengaturan jarak border di form */
+form {
+    background-color: aliceblue;
+    padding: 25px;
+}
+
+button {
+    border: none;
+    padding: 8px;
+}
+
+.bg-hitung {
+    background-color: lightskyblue;
+}
+
+.bg-reset {
+    background-color: gainsboro;
+}
+
+/* Pengaturan jarak tulisan Fitur Unggulan */
+.fit-unggulan {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.unggulan {
+    margin-top: 8px;
+}
+
+/* Pengaturan posisi judul dan nominal hasil perhitungan */
+.result-section {
+    padding: 16px;
+    text-align: center;
+    background-color: aliceblue;
+}
+
+/* Pengaturan posisi konten bagian kanan (Hasil) */
+#hasil-bmi {                    /* jika dari "id" menggunakan simbol # sebelum nama id nya */
+    font-size: xxx-large;
+    font-family: math;
+}
+
+/* Pengaturan posisi footer */
+footer {
+    text-align: center;
+}
